* Tue Aug 19 2014 Ding-Yi Chen <dchen at redhat.com> - 2.4.0
- ManageDependency: Make changes suitable for more generic *nix build.
    e.g. FEDORA_NAME -> PACKAGE_NAME
- ManageZanata: MANAGE_ZANATA: New option CLEAN_ZANATA_XML.

* Fri Aug 15 2014 Ding-Yi Chen <dchen at redhat.com> - 2.1.3
- Fixed cmake-fedora-fedpkg    	

* Fri Aug 15 2014 Ding-Yi Chen <dchen at redhat.com> - 2.1.2
- ManageVariable: CMAKE_FEDORA_CONF_GET_ALL_VARIABLES are now accepting the same 
    parameters as SETTING_FILE_GET_ALL_VARIABLES
- Fixed the bodhi push  as Fedora-21 and EPEL-7 are not yet in bodhi. 

* Tue Aug 12 2014 Ding-Yi Chen <dchen at redhat.com> - 2.1.1
- Fixed Bug 1002279 - Project configuration bugs when using cmake-fedora-newprj 
- cmake-fedora-newprj: Correct git repo URL
- ManageZanata: Fix zanata.xml suggest countries.
 

* Mon Aug 11 2014 Ding-Yi Chen <dchen at redhat.com> - 2.1.0
- Fixed Bug 1093336 - date(1): -u is much portable than --utc
- Fix EPEL 7 support.
- Enhancement:
  + No need to use MAKE_INSTALL_* for rpm files section.
    INSTALL at any place works.
  + Better handling of ChangeLog:
    - ChangeLog will only invoked before make pack_src or make changelog.
  + find_lang and files -f .lang are added automatically when
    translations exists.
  + New targets:
    - dist: Produce the source archive file. This is in GNU Standard targets.
  + New modules:
    - CmakeFedoraScript: Scripts to be invoked in command line.
    - ManageChangeLogScript: Scripts for handling ChangeLog.
    - ManageRpmScript: RPM Scripts for handling RPM and SPEC.
    - ManageZanata: Zanata translation service. Split from ManageTranslation
  + New cache variables:
    - CMAKE_FEDORA_MODULE_DIR: cmake-fedora modules dir.
  + ManageFile: New function: MANAGE_CMAKE_FEDORA_CONF
  + ManageFile: New function: MANAGE_FILE_CACHE
  + ManageFile: New function: MANAGE_FILE_EXPIRY
  + ManageGConf: New macro: MANAGE_GCONF_SCHEMAS
  + ManageMessage: New function: M_OUT