@@ -124,7 +124,7 @@ MANAGE_CMAKE_FEDORA_CONF(CMAKE_FEDORA_CONF
 
 MACRO(RELEASE_FEDORA_FIND_DEPENDENCY var)
     FIND_PROGRAM_ERROR_HANDLING(${var}
-	ERROR_MSG "${ARGV1} not found, Fedora release support disabled."
+	ERROR_MSG "${ARGN} not found, Fedora release support disabled."
 	ERROR_VAR _manage_release_fedora_dependencies_missing
 	VERBOSE_LEVEL ${M_OFF}
 	FIND_ARGS ${ARGN}
@@ -136,7 +136,9 @@ RELEASE_FEDORA_FIND_DEPENDENCY(FEDORA_UPLOAD_CA_CERT
 RELEASE_FEDORA_FIND_DEPENDENCY(FEDPKG_ fedpkg)
 RELEASE_FEDORA_FIND_DEPENDENCY(KOJI_EXECUTABLE koji)
 RELEASE_FEDORA_FIND_DEPENDENCY(GIT_EXECUTABLE git)
-RELEASE_FEDORA_FIND_DEPENDENCY(BODHI-CLIENT_EXECUTABLE bodhi)
+## Workaround for Bug 1115136 otherwise el7 won't work
+RELEASE_FEDORA_FIND_DEPENDENCY(BODHI-CLIENT_EXECUTABLE NAMES bodhi client.py 
+    PATHS /usr/bin/bodhi)
 RELEASE_FEDORA_FIND_DEPENDENCY(CMAKE_FEDORA_KOJI_EXECUTABLE cmake-fedora-koji
     PATHS ${CMAKE_FEDORA_ADDITIONAL_SCRIPT_PATH} NO_DEFAULT_PATH)
 RELEASE_FEDORA_FIND_DEPENDENCY(CMAKE_FEDORA_FEDPKG_EXECUTABLE cmake-fedora-fedpkg
